# anonigod

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Pipfile  README.md  cases.yml  cases_config.example.yml  connections.example.json  pyproject.toml  setup.py
.github/workflows/: main.yaml
anonimization_script/: app.py  cli.py  exceptions.py  utils.py
anonimization_script/cases/: __init__.py  db.py  mapper.py  meta.py  progressbar.py  rules.py
anonimization_script/cases/mapper/: __init__.py  abstracts.py
anonimization_script/cases/rules/: __init__.py  abstracts.py  factories.py
cases/: __init__.py  db.py  mapper.py  meta.py  rules.py
cases/compliancer/: __init__.py  connections.json
docs/source/: anonimization_script.cli.rst  anonimization_script.exceptions.rst  anonimization_script.rst  anonimization_script.utils.rst  conf.py  index.rst  modules.rst
